@@ -1,4 +1,8 @@
-SoDa version 1.1 is the first release of the SoDa software. 
+SVN 116 (branch TuneStep)  Changed the RX tuning in this rev so that
+the integer-N mode picks the nearest integer-N frequency that is 1MHz
+below the target. (See USRPCtrl::getNearestStep() )  This is done 
+from a map built at startup time. (See USRPCtrl::initStepMap ). 
 
-sic transit gloria thursdi
+Also re-arranged RX freq setting code for the B2xx series.  This may 
+eliminate the spectrum display problems as the tuning is swept.... 
 
